# Instrumotion-Core

./: .gitignore  CMakeLists.txt  README.md  build.sh  instrumotion_core_restructure_tasks.md
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  InstrumotionCoreAPI.cpp
src/ar/: CMakeLists.txt
src/audio/: CMakeLists.txt
src/core/: CMakeLists.txt  Error.hpp  Logger.hpp
src/gesture_recognition/: CMakeLists.txt
src/output/: CMakeLists.txt  OutputFormatter.cpp
src/plugins/: CMakeLists.txt  PluginManager.cpp  PluginManager.hpp
src/plugins/android/: AndroidSensor.cpp  AndroidSensor.hpp  CMakeLists.txt
src/plugins/ios/: CMakeLists.txt  IOSSensor.cpp  IOSSensor.hpp
src/plugins/linux/: CMakeLists.txt  LinuxSensor.cpp  LinuxSensor.hpp
src/plugins/macos/: CMakeLists.txt  MacOSSensor.cpp  MacOSSensor.hpp
src/plugins/windows/: CMakeLists.txt  WindowsSensor.cpp  WindowsSensor.hpp
src/sam2/: CMakeLists.txt
src/sensor_hub/: AccelerometerSensor.cpp  AccelerometerSensor.hpp  CMakeLists.txt  CameraSensor.cpp  ISensor.hpp  MidiControllerSensor.cpp  MidiControllerSensor.hpp  SensorManager.cpp  SensorManager.hpp
src/sync/: CMakeLists.txt
